--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,144 @@
 /* #212121; - основний текст */
 /* #757575; - підписи */
 /* лого - #000000 #2196F3; */
- .accent{
+body{
+   font-family: roboto, sans-serif;
+   font-size: 14px;
+   color: #212121;
+   font-weight: 400;
+    list-style-type: none;
+  
+}
+ .web{
     color:#2196F3;
+    font-family: raleway;
+   font-size: 26px;
+   letter-spacing: 0.78px;
+   text-decoration: none;
+   
  }
  .studio{
     color:black;
+   font-family: raleway;
+   font-size: 26px;
+   letter-spacing: 0.78px;
+   text-decoration: none;
  }
  
+ .nav{
+  
+   font-weight: 500;
+   letter-spacing: 0.28px;
+color: #212121;
+   text-decoration: none;
+  
+ 
+ }
+.nav:hover{
+   color:#2196F3;
+ }
+ .nav:focus{
+  color: #2196F3;
+ }
+ .contact{
+   color:#757575;
+   font-weight: 500;
+   letter-spacing: 0.28px;
+
+   font-style:normal;
+   text-decoration: none;
+ }
+
+ .contact:hover{
+   color:#2196F3;
+ }
+ .contact:focus {
+   color: #2196F3;
+ }
+ .hero{
+   color:#FFFFFf;
+   text-align: center;
+   font-size: 44px;
+   font-weight: 900;
+   line-height: 1,36;
+   letter-spacing: 2.64px;
+   text-transform: uppercase;
+ }
+ .button-hero{
+   color: #FFF;
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 1,87;
+      letter-spacing: 0.96px;
+         background: #2196F3;
+         cursor: pointer;
+ }
+ .description-title{
+     font-size: 14px;
+      font-weight: 700;
+      letter-spacing: 0.42px;
+      text-transform: uppercase;
+    
+ }
+ .description{
+color: #757575;
+   line-height: 1,7;
+   letter-spacing: 0.42px;
+ 
+ }
+ .subtitle{
+
+      font-family: Roboto;
+      font-size: 36px;
+      font-weight: 700;
+      letter-spacing: 1.08px;
+ }
+ .name{
+
+      text-align: center;
+      font-size: 16px;
+      font-weight: 500;
+      letter-spacing: 0.48px;
+ }
+ .prof{
+   color: #757575;
+      font-family: Roboto;
+      font-size: 16px;
+      letter-spacing: 0.48px;
+ }
+ .adress{
+   color: #FFF;
+      line-height: 1,7;
+      letter-spacing: 0.42px;
+      font-style: normal;
+ }
+ .webstudio{
+   text-decoration: none;
+ }
+ .radio-button{
+color: #212121;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1,5;
+  letter-spacing: 0.48px;
+  cursor: pointer;
+ }
+ .radio-button:hover{
+  color: #fff;
+  background-color: #2196F3;
+
+
+ }
+    .radio-button:focus {
+      color: #fff;
+      background-color: #2196F3;}
+ .signature{
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: 0.42px;
+    text-transform: uppercase;
+    color: #212121;
+ }
