--- a/css/styles.css
+++ b/css/styles.css
@@ -6,15 +6,15 @@ body{
    font-size: 14px;
    color: #212121;
    font-weight: 400;
-    list-style-type: none;
-  
+   text-decoration: none;
+   
 }
  .web{
     color:#2196F3;
     font-family: raleway;
    font-size: 26px;
    letter-spacing: 0.78px;
-   text-decoration: none;
+   font-weight: 700;
    
  }
  .studio{
@@ -22,7 +22,8 @@ body{
    font-family: raleway;
    font-size: 26px;
    letter-spacing: 0.78px;
-   text-decoration: none;
+   font-weight: 700;
+
  }
  
  .nav{
@@ -30,9 +31,13 @@ body{
    font-weight: 500;
    letter-spacing: 0.28px;
 color: #212121;
-   text-decoration: none;
+ text-decoration: none;
   
- 
+ }
+ .nav-index,
+ .nav-portf{
+  color: #2196F3;
+
  }
 .nav:hover{
    color:#2196F3;
@@ -40,12 +45,11 @@ color: #212121;
  .nav:focus{
   color: #2196F3;
  }
+
  .contact{
    color:#757575;
    font-weight: 500;
    letter-spacing: 0.28px;
-
-   font-style:normal;
    text-decoration: none;
  }
 
@@ -60,15 +64,16 @@ color: #212121;
    text-align: center;
    font-size: 44px;
    font-weight: 900;
-   line-height: 1,36;
+   line-height: 1.36;
    letter-spacing: 2.64px;
    text-transform: uppercase;
+   background-color: #2F303A;
  }
  .button-hero{
    color: #FFF;
       font-size: 16px;
       font-weight: 700;
-      line-height: 1,87;
+      line-height: 1.87;
       letter-spacing: 0.96px;
          background: #2196F3;
          cursor: pointer;
@@ -77,8 +82,6 @@ color: #212121;
      font-size: 14px;
       font-weight: 700;
       letter-spacing: 0.42px;
-      text-transform: uppercase;
-    
  }
  .description{
 color: #757575;
@@ -86,16 +89,16 @@ color: #757575;
    letter-spacing: 0.42px;
  
  }
- .subtitle{
+ .comand{
 
-      font-family: Roboto;
+    background-color: #F5F4FA;;
       font-size: 36px;
       font-weight: 700;
       letter-spacing: 1.08px;
  }
  .name{
 
-      text-align: center;
+      
       font-size: 16px;
       font-weight: 500;
       letter-spacing: 0.48px;
@@ -105,10 +108,11 @@ color: #757575;
       font-family: Roboto;
       font-size: 16px;
       letter-spacing: 0.48px;
+      text-decoration: none;
  }
  .adress{
    color: #FFF;
-      line-height: 1,7;
+      line-height: 1.7;
       letter-spacing: 0.42px;
       font-style: normal;
  }
@@ -116,30 +120,55 @@ color: #757575;
    text-decoration: none;
  }
  .radio-button{
-color: #212121;
-  text-align: center;
-  font-family: Roboto;
   font-size: 16px;
   font-weight: 500;
-  line-height: 1,5;
+  line-height: 1.5;
   letter-spacing: 0.48px;
   cursor: pointer;
- }
+  background-color: #F5F4FA;
+  font-family: inherit;}
+
  .radio-button:hover{
   color: #fff;
   background-color: #2196F3;
-
-
  }
-    .radio-button:focus {
-      color: #fff;
-      background-color: #2196F3;}
+
+  .radio-button:focus {
+   color: #fff;
+  background-color: #2196F3;}
+
  .signature{
-    font-family: Roboto;
-    font-size: 14px;
+  text-decoration: none;
+    font-size: 18px;
     font-weight: 700;
     letter-spacing: 0.42px;
-    text-transform: uppercase;
     color: #212121;
+    line-height: 0.5px;
  }
- 
+ ul{
+  list-style-type: none;
+ }
+ .contact-footer{
+  color: rgba(255, 255, 255, 0.60);
+  text-decoration: none ;
+ }
+ .contact-footer:hover,
+ .contact0footer:focus{
+  color:#2196F3;
+ }
+
+ .footer{
+  background-color: #2F303A;
+ }
+   .studio-footer{
+  color: #FFF;
+  font-family: raleway;
+  font-size: 26px;
+     letter-spacing: 0.78px;
+    font-weight: 700;
+ }  
+
+a{
+  text-decoration: none;
+}
+
