--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,22 @@
 /* #212121; - основний текст */
 /* #757575; - підписи */
 /* лого - #000000 #2196F3; */
+:root{
+  --title-text-color: #212121;
+  --primary-text-color:#757575;
+  --accent-color: #2196F3;
+  --second-accent-color:#F5F4FA;
+}
 body{
    font-family: roboto, sans-serif;
    font-size: 14px;
    color: #212121;
    font-weight: 400;
    text-decoration: none;
-   
+  
 }
  .web{
-    color:#2196F3;
+    color:var(--accent-color);
     font-family: raleway;
    font-size: 26px;
    letter-spacing: 0.78px;
@@ -27,37 +33,37 @@ body{
  }
  
  .nav{
-  
-   font-weight: 500;
+    font-weight: 500;
    letter-spacing: 0.28px;
-color: #212121;
+color: var(--title-text-color);
  text-decoration: none;
   
  }
  .nav-index,
  .nav-portf{
-  color: #2196F3;
+  color: var(--accent-color);
+  font-weight: 500;
 
  }
 .nav:hover{
-   color:#2196F3;
+   color:var(--accent-color);
  }
  .nav:focus{
-  color: #2196F3;
+  color:var(--accent-color);
  }
 
  .contact{
-   color:#757575;
+   color:var(--primary-text-color);
    font-weight: 500;
    letter-spacing: 0.28px;
    text-decoration: none;
  }
 
  .contact:hover{
-   color:#2196F3;
+   color:var(--accent-color);
  }
  .contact:focus {
-   color: #2196F3;
+   color: var(--accent-color);
  }
  .hero{
    color:#FFFFFf;
@@ -75,7 +81,7 @@ color: #212121;
       font-weight: 700;
       line-height: 1.87;
       letter-spacing: 0.96px;
-         background: #2196F3;
+         background: var(--accent-color);
          cursor: pointer;
  }
  .description-title{
@@ -84,16 +90,16 @@ color: #212121;
       letter-spacing: 0.42px;
  }
  .description{
-color: #757575;
+color: var(--primary-text-color);
    line-height: 1,7;
    letter-spacing: 0.42px;
  
  }
  .comand{
 
-    background-color: #F5F4FA;;
+    background-color:var(--second-accent-color);
       font-size: 36px;
-      font-weight: 700;
+    
       letter-spacing: 1.08px;
  }
  .name{
@@ -104,8 +110,7 @@ color: #757575;
       letter-spacing: 0.48px;
  }
  .prof{
-   color: #757575;
-      font-family: Roboto;
+   color: var(--primary-text-color);
       font-size: 16px;
       letter-spacing: 0.48px;
       text-decoration: none;
@@ -115,6 +120,7 @@ color: #757575;
       line-height: 1.7;
       letter-spacing: 0.42px;
       font-style: normal;
+    
  }
  .webstudio{
    text-decoration: none;
@@ -125,40 +131,45 @@ color: #757575;
   line-height: 1.5;
   letter-spacing: 0.48px;
   cursor: pointer;
-  background-color: #F5F4FA;
-  font-family: inherit;}
+  background-color: var(--second-accent-color);
+  font-family: inherit;
+}
 
  .radio-button:hover{
   color: #fff;
-  background-color: #2196F3;
+  background-color: var(--accent-color);
  }
-
   .radio-button:focus {
    color: #fff;
-  background-color: #2196F3;}
+  background-color: var(--accent-color);
+}
 
  .signature{
   text-decoration: none;
     font-size: 18px;
     font-weight: 700;
     letter-spacing: 0.42px;
-    color: #212121;
+    color: var(--title-text-color);
     line-height: 0.5px;
  }
+
  ul{
   list-style-type: none;
  }
  .contact-footer{
   color: rgba(255, 255, 255, 0.60);
   text-decoration: none ;
+  font-style: normal;
+
  }
  .contact-footer:hover,
  .contact0footer:focus{
-  color:#2196F3;
+  color: var(--accent-color);
  }
 
  .footer{
   background-color: #2F303A;
+ 
  }
    .studio-footer{
   color: #FFF;
